--- a/Prover.toml
+++ b/Prover.toml
@@ -1,2 +1,7 @@
+externalNullifier = ""
+identitySecret = ""
+messageId = ""
+pathElements = ["", "", "", "", "", "", "", "", "", "", "", "", "", "", "", ""]
+pathSelectors = ["", "", "", "", "", "", "", "", "", "", "", "", "", "", "", ""]
+userMessageLimit = ""
 x = ""
-y = ""
